# TTT

./: .env.example  README.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: codeql-analysis.yml  (+1 more)
.husky/: pre-commit
backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/scripts/: backend-entrypoint.sh  celery-entrypoint.sh  docker-entrypoint.sh  wait-for.sh  ws-entrypoint.sh
backend/src/api/: admin.py  consumers.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_twitteraccount.py  0003_twitteraccount_user_id.py  0004_keyword_savedset.py  0005_rename_title_savedset_name.py  0006_userprofile.py  0007_alter_userprofile_savedsets.py  0008_delete_twitteraccount_alter_news_source.py  0009_userprofile_read_news.py  0010_rename_savedset_preset_and_more.py  0011_custompreset.py  0012_preset_content_type.py
backend/src/authentication/: serializers.py  urls.py  views.py
backend/src/config/: asgi.py  celery.py  settings.py  urls.py
backend/src/parsers/: abstract_parser.py  admin.py  apps.py  feedburner_rss.py  models.py  sigma_parser.py  tasks.py  twitter_parser.py
backend/src/parsers/fixtures/: initial_sources.json
backend/src/parsers/management/commands/: feedburner.py  parseRSS.py  scrapTweets.py  twitter.py
backend/src/parsers/migrations/: 0001_initial.py  0002_sigma.py
backend/src/utils/: pagination.py
frontend/: .eslintrc.js  Dockerfile  Dockerfile.prod  default.conf  package-lock.json  package.json
(+32 files in other folders)
