[tool.poetry]
name = "TTT-backend"
version = "0.1.0"
description = ""
authors = [
    "Mateusz Stafiniak <mateusz.stafiniak@apius.pl>",
    "Marcin Wojciechowski <wojc.marcin@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
Django = "^4.0.6"
feedparser = "^6.0.10"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
tweepy = "^4.10.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
django-environ = "^0.9.0"
celery = "^5.2.7"
PyYAML = "^6.0"
argh = "^0.26.2"
watchdog = {extras = ["watchmedo"], version = "^2.1.9"}
django-polymorphic = "^3.1.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
